# GodotNeuralNetworkTests

./: .gitignore  README.md  project.godot
CLion/: CMakeLists.txt
CLion/src/: main.cpp  main.h  simple.c
CLion/src/NN/: boilerplate.cpp  boilerplate.h  neural_network.cpp  neural_network.h
Godot/: project.godot
Godot/fonts/: debug_monospace.tres
Godot/scenes/: MAIN.tscn
Godot/scripts/: NN.gd  draw.gd  draw_neurons.gd  draw_synapses.gd  drawing_board.gd  files.gd  main.gd  profiler.gd
Godot/shaders/: input.shader
scenes/: MAIN.tscn
scripts/: draw.gd
